--- a/181121_react-tsx/package.json
+++ b/181121_react-tsx/package.json
@@ -39,6 +39,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.118",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
