--- a/181121_react-tsx/package.json
+++ b/181121_react-tsx/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^16.0.10",
     "autoprefixer": "^9.3.1",
     "babel-loader": "^8.0.4",
+    "chalk": "^2.4.1",
     "clean-webpack-plugin": "^1.0.0",
     "css-loader": "^1.0.1",
     "file-loader": "^2.0.0",
