--- a/181121_react-tsx/package.json
+++ b/181121_react-tsx/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "181121_react-tsx",
+  "name": "react-tsx",
   "version": "0.0.1",
-  "description": "",
+  "description": "这是一个webpack4,react,tsx架构",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config ./config/webpack.config.js --mode production",
     "start": "webpack-dev-server --config ./config/webpack.config.js --mode development --devtool inline-source-map --hot"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["webpack4", "react", "tsx"],
+  "author": "H",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.1.6",
@@ -32,6 +31,8 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.0",
+    "tslint": "^5.11.0",
+    "tslint-loader": "^3.5.4",
     "typescript": "^3.1.6",
     "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.1.2",
