--- a/181121_react-tsx/package.json
+++ b/181121_react-tsx/package.json
@@ -7,7 +7,11 @@
     "build": "webpack --config ./config/webpack.config.js --mode production",
     "start": "webpack-dev-server --config ./config/webpack.config.js --mode development --devtool inline-source-map --hot"
   },
-  "keywords": ["webpack4", "react", "tsx"],
+  "keywords": [
+    "webpack4",
+    "react",
+    "tsx"
+  ],
   "author": "H",
   "license": "ISC",
   "devDependencies": {
@@ -43,6 +47,8 @@
   "dependencies": {
     "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.118",
+    "echarts": "^4.2.0-rc.2",
+    "move-js": "^0.5.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
   }
