--- a/181129_Ant-Design/package.json
+++ b/181129_Ant-Design/package.json
@@ -18,7 +18,6 @@
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
-    "@types/node": "^10.12.10",
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
     "autoprefixer": "^9.3.1",
@@ -46,11 +45,10 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
-    "@material-ui/core": "^3.6.0",
     "@types/axios": "^0.14.0",
-    "@types/echarts": "^4.1.3",
     "@types/lodash": "^4.14.118",
-    "echarts": "^4.2.0-rc.2",
+    "antd": "^3.10.9",
+    "move-js": "^0.5.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
   }
