--- a/181129_Ant-Design/tsconfig.json
+++ b/181129_Ant-Design/tsconfig.json
@@ -9,6 +9,5 @@
     "allowJs": true,
     "lib": ["es2015", "dom"]
   },
-  "include": ["./src/**/*"],
-  "exclude": ["./dist/**/*"]
+  "include": ["./src/**/*"]
 }
