--- a/181128_Material-UI/package.json
+++ b/181128_Material-UI/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.6.0",
+    "@material-ui/icons": "^3.0.1",
     "@types/axios": "^0.14.0",
     "@types/echarts": "^4.1.3",
     "@types/lodash": "^4.14.118",
