--- a/181121_react-tsx/tsconfig.json
+++ b/181121_react-tsx/tsconfig.json
@@ -7,7 +7,8 @@
     "target": "es5",
     "jsx": "react",
     "allowJs": true,
-    "lib": ["es2015", "dom"]
+    "lib": ["es2015", "dom"],
+    "downlevelIteration": true
   },
   "include": ["./src/**/*"]
 }
