--- a/181211_react-redux/package.json
+++ b/181211_react-redux/package.json
@@ -49,6 +49,9 @@
     "@types/lodash": "^4.14.118",
     "move-js": "^0.5.0",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
+    "redux": "^4.0.1"
   }
 }
