--- a/181211_react-redux/package.json
+++ b/181211_react-redux/package.json
@@ -47,7 +47,9 @@
   "dependencies": {
     "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.118",
+    "@types/react-redux": "^6.0.11",
     "move-js": "^0.5.0",
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
