--- a/181211_react-redux/package.json
+++ b/181211_react-redux/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-react": "^7.0.0",
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
+    "@types/react-router-dom": "^4.3.1",
     "autoprefixer": "^9.3.1",
     "babel-loader": "^8.0.4",
     "chalk": "^2.4.1",
@@ -54,6 +55,7 @@
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.1"
   }
 }
