--- a/181211_react-redux/package.json
+++ b/181211_react-redux/package.json
@@ -18,6 +18,7 @@
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
+    "@types/node": "^10.12.15",
     "@types/react": "^16.7.7",
     "@types/react-dom": "^16.0.10",
     "@types/react-router-dom": "^4.3.1",
@@ -54,7 +55,6 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
-    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1"
   }
